Refactor file and split methods